# Rust-Simple-Authentication

./: Cargo.toml  README.md
database/: test.db
src/: lib.rs  main.rs
