[package]
name = "rust-simple-authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
chrono = "0.4.23"
jsonwebtoken = "8.2.0"
rust-argon2 = "1.0.0"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["sqlite" , "runtime-tokio-rustls"] }
tokio = { version = "1.25.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4" , "fast-rng"] }
